--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -25,6 +25,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c54147dc-3565-4875-9612-f9f2c1286930",
+   "metadata": {},
+   "source": [
+    "## To do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f472bf-a8d3-43fa-a346-993f2526aaea",
+   "metadata": {},
+   "source": [
+    "- [ ] Rewrite snapping with momepy/geopandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d22412b-3d1f-4203-bbc4-4629f35c0c06",
    "metadata": {},
    "source": [
