--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -38,19 +38,7 @@
    "source": [
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
-    "- [ ] Semilogy scale for loop lengths\n",
-    "- [X] Add LOOP_LENGTH_BOUND and save only <=40km loops, to allow DK-level plots\n",
-    "- [X] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
-    "- [X] Create a preprocessing step for poi snapping\n",
-    "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
-    "- [X] Create testing possibility with random poi data, without poi snapping\n",
-    "- [X] Make all constants allcaps\n",
-    "- [x] Snap POIs to the original link geometries, within a threshold\n",
-    "- [x] Incorporate gradients\n",
-    "- [x] Add loop permutations for node-based analysis\n",
-    "- [x] Drop non-main nodes\n",
-    "- [x] Drop loops (they are really dangling links)\n",
-    "- [x] Find all simple loops (bounded?-max length?) with networkX"
+    "- [ ] Semilogy scale for loop lengths"
    ]
   },
   {
