--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -29,11 +29,7 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [X] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
-    "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
-    "- [X] Visualize link lengths (conforming/non-conforming)\n",
-    "- [ ] Possibly refactor plotting code cells as one function\n",
-    "- [X] Correlations between all basic properties, especially: faceloop length vs avgslope, link length vs max/avgslope"
+    "- [ ] Possibly refactor plotting code cells as one function"
    ]
   },
   {
