Rewrite snapping with momepy/geopandas
- Nodes per faceloop has fixed itself

--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-07  \n",
-    "Last modified: 2025-08-07"
+    "Last modified: 2025-08-08"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "id": "44f472bf-a8d3-43fa-a346-993f2526aaea",
    "metadata": {},
    "source": [
-    "- [ ] Rewrite snapping with momepy/geopandas"
+    "- [X] Rewrite snapping with momepy/geopandas"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "debug = True  # Set to True for extra plots and verbosity"
+    "debug = False  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -99,11 +99,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merge graphs\n",
     "Gnx = nx.empty_graph()\n",
     "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
     "    with lzma.open(PATH[subarea][\"data_out\"] + \"network_preprocessed0.xz\", \"rb\") as f:\n",
     "        G_new = pickle.load(f)\n",
-    "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())"
+    "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
+    "\n",
+    "# Merge POIs\n",
+    "poi_files = {\n",
+    "    \"facility\": [\n",
+    "        \"facility.gpkg\",\n",
+    "    ],\n",
+    "    \"service\": [\n",
+    "        \"service.gpkg\",\n",
+    "    ],\n",
+    "    \"attraction\": [\"poi.gpkg\"],\n",
+    "}\n",
+    "pois = gpd.GeoDataFrame()\n",
+    "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
+    "    for cat in [*poi_files]:\n",
+    "        for f in poi_files[cat]:\n",
+    "            pois_new = gpd.read_file(PATH[subarea][\"data_in_pois\"] + f)\n",
+    "            pois_new[\"category\"] = cat\n",
+    "            # Shift Bornholm POIs\n",
+    "            if subarea == \"bornholm\":\n",
+    "                pois_new[\"geometry\"] = pois_new[\"geometry\"].apply(\n",
+    "                    shapely.affinity.translate,\n",
+    "                    xoff=BORNHOLM_DELTA[0],\n",
+    "                    yoff=BORNHOLM_DELTA[1],\n",
+    "                )\n",
+    "\n",
+    "            pois = pd.concat([pois, pois_new], ignore_index=True)\n",
+    "pois = pois.drop([\"type\", \"gruppe\"], axis=1)\n",
+    "if debug:\n",
+    "    print(pois.head())"
    ]
   },
   {
@@ -111,7 +141,7 @@
    "id": "531fa6e0-b199-4afb-b7b7-cdade7461cef",
    "metadata": {},
    "source": [
-    "Turn into gdf:"
+    "Turn into gdf and initialize:"
    ]
   },
   {
@@ -122,17 +152,24 @@
    "outputs": [],
    "source": [
     "# https://docs.momepy.org/en/stable/user_guide/graph/convert.html\n",
-    "nodes, edges = momepy.nx_to_gdf(Gnx, points=True, lines=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92f44a1b-3473-4906-a1c5-7b3b57ac1c82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edges.head()"
+    "nodes, edges = momepy.nx_to_gdf(Gnx, points=True, lines=True)\n",
+    "nodes.set_crs(epsg=25832, inplace=True)\n",
+    "nodes_id = list(nodes.nodeID)\n",
+    "nodes_x = list(nodes.geometry.x)\n",
+    "nodes_y = list(nodes.geometry.y)\n",
+    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))\n",
+    "\n",
+    "edges.set_crs(epsg=25832, inplace=True)\n",
+    "\n",
+    "# Initialize\n",
+    "edges[\"has_water\"] = False\n",
+    "edges[\"has_facility\"] = False\n",
+    "edges[\"has_service\"] = False\n",
+    "edges[\"has_attraction\"] = False\n",
+    "edges[\"poi_diversity\"] = 0\n",
+    "\n",
+    "if debug:\n",
+    "    print(edges.head())"
    ]
   },
   {
@@ -157,29 +194,48 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5f3760a9-efb8-4d37-bdee-25d2b7d75eeb",
-   "metadata": {},
-   "source": [
-    "We have a small number of facilities and links, so computationally it should be fine to loop through all pairwise."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ab9e5d-4019-4c9e-9744-6d727e14fd3e",
+   "id": "2b5163a0-7b5e-4ea1-89e2-50cec60c4d5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "poi_files = {\n",
-    "    \"facility\": [\n",
-    "        \"facility.gpkg\",\n",
-    "    ],\n",
-    "    \"service\": [\n",
-    "        \"service.gpkg\",\n",
-    "    ],\n",
-    "    \"attraction\": [\"poi.gpkg\"],\n",
-    "}"
+    "# https://stackoverflow.com/questions/52582864/snap-a-geodataframe-of-points-to-nearest-line-in-separate-geodataframe\n",
+    "\n",
+    "# Join the closest line geometry to each point\n",
+    "edges[\n",
+    "    \"line_geom\"\n",
+    "] = edges.geometry  # Save the line geometry in a new column, or it is lost in the sjoin\n",
+    "pois_snapped = pois.sjoin_nearest(\n",
+    "    edges[[\"line_geom\", \"geometry\"]],\n",
+    "    how=\"left\",\n",
+    "    max_distance=SNAP_THRESHOLD,\n",
+    "    distance_col=\"distance\",\n",
+    ")\n",
+    "drop_indices = pois_snapped[pois_snapped[\"line_geom\"] == None].index\n",
+    "pois_snapped.drop(drop_indices, inplace=True)  # Drop POIs that are too far from a link\n",
+    "\n",
+    "# Snap each point to the nearest point on the nearest line\n",
+    "pois_snapped[\"geometry\"] = pois_snapped.apply(\n",
+    "    lambda x: snap(\n",
+    "        x.geometry, nearest_points(x.geometry, x.line_geom)[1], tolerance=SNAP_THRESHOLD\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")\n",
+    "\n",
+    "pois_snapped = pois_snapped.drop(columns=[\"line_geom\"])\n",
+    "pois_snapped.rename(columns={\"index_right\": \"index_edge\"}, inplace=True)\n",
+    "\n",
+    "if debug:\n",
+    "    print(pois_snapped.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7e0f56c-d5eb-4a74-8ad8-86e7ab771ff3",
+   "metadata": {},
+   "source": [
+    "With the snapped POIs, update the POI attributes of all affected edges:"
    ]
   },
   {
@@ -189,72 +245,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize\n",
-    "for e in G.es:\n",
-    "    e[\"has_water\"] = False\n",
-    "    e[\"has_facility\"] = False\n",
-    "    e[\"has_service\"] = False\n",
-    "    e[\"has_attraction\"] = False\n",
-    "    e[\"poi_diversity\"] = 0\n",
+    "# Use available poi files\n",
+    "e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
     "\n",
-    "if not POIS_AVAILABLE:  # Create random data for testing\n",
-    "    for e in G.es:\n",
-    "        e[\"has_facility\"] = (\n",
-    "            True if np.random.rand() < 0.11 else False\n",
-    "        )  # Reasonably looking thresholds\n",
-    "        e[\"has_service\"] = True if np.random.rand() < 0.17 else False\n",
-    "        e[\"has_attraction\"] = True if np.random.rand() < 0.08 else False\n",
-    "        poi_diversity = 0\n",
-    "        if e[\"has_facility\"]:\n",
-    "            e[\"has_water\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        if e[\"has_service\"]:\n",
-    "            e[\"has_water\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        if e[\"has_attraction\"]:\n",
-    "            e[\"has_water\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        e[\"poi_diversity\"] = poi_diversity\n",
-    "\n",
-    "else:  # Use available poi files\n",
-    "    e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
-    "    for cat in [*poi_files]:\n",
-    "        for f in poi_files[cat]:\n",
-    "            print(\"Adding POIs from file: \" + f)\n",
-    "            pois = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
-    "            for _, poirow in tqdm(pois.iterrows(), total=pois.shape[0]):\n",
-    "                d = 999999999999\n",
-    "                eid = False\n",
-    "                if poirow[\"type\"]:  # Could add conditions on type later, like Vandpost\n",
-    "                    poi_this = poirow[\"geometry\"]\n",
-    "                    for eindex, erow in edges_orig.iterrows():\n",
-    "                        d_this = poi_this.distance(erow[\"geometry\"])\n",
-    "                        if (\n",
-    "                            d_this < d\n",
-    "                            and erow[\"edge_id\"] in edges_orig[\"edge_id\"].values\n",
-    "                        ):\n",
-    "                            d = d_this\n",
-    "                            eid = erow[\"edge_id\"]\n",
-    "                if eid and d <= SNAP_THRESHOLD:\n",
-    "                    e_haspoi[cat].add(eid)\n",
-    "\n",
-    "    e_haswater = set()\n",
-    "    e_haswater = e_haspoi[\"facility\"] | e_haspoi[\"service\"] | e_haspoi[\"attraction\"]\n",
-    "\n",
-    "    for e in G.es:\n",
-    "        poi_diversity = 0\n",
-    "        if e[\"edge_id\"] in e_haswater:\n",
-    "            e[\"has_water\"] = True\n",
-    "        if e[\"edge_id\"] in e_haspoi[\"facility\"]:\n",
-    "            e[\"has_facility\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        if e[\"edge_id\"] in e_haspoi[\"service\"]:\n",
-    "            e[\"has_service\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        if e[\"edge_id\"] in e_haspoi[\"attraction\"]:\n",
-    "            e[\"has_attraction\"] = True\n",
-    "            poi_diversity += 1\n",
-    "        e[\"poi_diversity\"] = poi_diversity"
+    "for _, poirow in tqdm(pois_snapped.iterrows(), total=pois_snapped.shape[0]):\n",
+    "    edges.at[poirow[\"index_edge\"], \"has_water\"] = True\n",
+    "    edges.at[poirow[\"index_edge\"], \"has_\" + poirow[\"category\"]] = True\n",
+    "edges[\"has_water\"] = (\n",
+    "    edges[\"has_facility\"] + edges[\"has_service\"] + edges[\"has_attraction\"]\n",
+    ")  # + on bools is an or\n",
+    "edges[\"poi_diversity\"] = (\n",
+    "    edges[\"has_facility\"].astype(int)\n",
+    "    + edges[\"has_service\"].astype(int)\n",
+    "    + edges[\"has_attraction\"].astype(int)\n",
+    ")\n",
+    "if debug:\n",
+    "    print(edges.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d2b0b4-71d5-4b9d-8b03-1ac3c604215a",
+   "metadata": {},
+   "source": [
+    "gdf to nx to igraph 😅:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc98ccf-220f-4e63-977c-b22e91ca5f71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = momepy.gdf_to_nx(edges, approach=\"primal\", integer_labels=True)\n",
+    "G = ig.Graph.from_networkx(Gnx)\n",
+    "G.vs[\"name\"] = G.vs[\"_nx_name\"]\n",
+    "del G.vs[\"_nx_name\"]\n",
+    "del G[\"approach\"]\n",
+    "del G[\"crs\"]\n",
+    "del G.es[\"_nx_multiedge_key\"]\n",
+    "del G.es[\"line_geom\"]\n",
+    "G.es[\"weight\"] = G.es[\"mm_len\"]\n",
+    "del G.es[\"mm_len\"]\n",
+    "if debug:\n",
+    "    print(G.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "650ade57-da14-46eb-8bfc-2fdb7c317bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if debug:  # Just some code needed for the plots below\n",
+    "    nodes, edges = momepy.nx_to_gdf(Gnx, points=True, lines=True)\n",
+    "    nodes.set_crs(epsg=25832, inplace=True)\n",
+    "    nodes_id = list(nodes.nodeID)\n",
+    "    nodes_x = list(nodes.geometry.x)\n",
+    "    nodes_y = list(nodes.geometry.y)\n",
+    "    nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))"
    ]
   },
   {
@@ -285,8 +336,7 @@
     "        edge_width=edge_widths,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"POI diversity\")\n",
-    "    plt.tight_layout()\n",
-    "    fig.savefig(PATH[\"plot\"] + \"poidiversity\")"
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -322,8 +372,7 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Water links highlighted\")\n",
-    "    plt.tight_layout()\n",
-    "    fig.savefig(PATH[\"plot\"] + \"waterlinks\")"
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -359,8 +408,7 @@
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Max slopes highlighted\")\n",
-    "    plt.tight_layout()\n",
-    "    fig.savefig(PATH[\"plot\"] + \"maxslopes\")"
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -369,16 +417,6 @@
    "metadata": {},
    "source": [
     "## Save preprocessed network data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89036e5d-2e88-4e78-836d-272c53606e74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G.summary()"
    ]
   },
   {
