--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-08-07"
+    "Last modified: 2025-08-08"
    ]
   },
   {
@@ -94,10 +94,9 @@
    "outputs": [],
    "source": [
     "Gnx = nx.empty_graph()\n",
-    "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
-    "    with lzma.open(PATH[subarea][\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
-    "        G_new = pickle.load(f)\n",
-    "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
+    "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
+    "    G_new = pickle.load(f)\n",
+    "    Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
     "if debug:\n",
     "    print(\"N: \" + str(Gnx.number_of_nodes()), \", L: \" + str(Gnx.number_of_edges()))\n",
     "    for k, v in list(Gnx.nodes(data=True))[:10]:\n",
@@ -204,14 +203,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "88902749-ef58-45ea-8fd5-f981c269bda1",
-   "metadata": {},
-   "source": [
-    "Code to fix below"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7525a45c-13c4-48b7-8365-1ff7562a7fc1",
@@ -234,16 +225,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(faceloopnodes, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
-    "# Something is wrong. There are 320 faces without nodes, 949 with just 1 node, 1123 with just 2 nodes?? But each face needs to have at least 3 nodes!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c579a812-9f9d-46da-ab6d-69457b48d0a7",
-   "metadata": {},
-   "source": [
-    "Code to fix above"
+    "h = plt.hist(faceloopnodes, range(18))\n",
+    "plt.title(\"Nodes per faceloop\")\n",
+    "print(h[1])\n",
+    "print(h[0])"
    ]
   },
   {
