Create get_allloops function
Create 06_poi_experiments

--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -297,94 +297,7 @@
    "outputs": [],
    "source": [
     "# Get all loops, meaning a loop ABCA is counted also as BCAB and CABC\n",
-    "allloops = {}\n",
-    "for nid in list(Gnx.nodes(data=False)):  # Initialize allloops\n",
-    "    allloops[nid] = {\n",
-    "        \"loops\": [],\n",
-    "        \"lengths\": [],\n",
-    "        \"numnodes\": [],\n",
-    "        \"max_slopes\": [],\n",
-    "        \"water_profile\": [],\n",
-    "        \"poi_diversity\": [],\n",
-    "    }\n",
-    "\n",
-    "numloops = 0\n",
-    "allloops_generator = nx.simple_cycles(\n",
-    "    Gnx, length_bound=LOOP_NUMNODE_BOUND\n",
-    ")  # length refers to number of nodes\n",
-    "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
-    "    sourcenode = c[0]\n",
-    "    c_length = get_loop_length(c)\n",
-    "    # LOOP_LENGTH_BOUND is 0 for no limit, or a number (meters)\n",
-    "    if not LOOP_LENGTH_BOUND or c_length * MPERUNIT <= LOOP_LENGTH_BOUND:\n",
-    "        c_max_slope = get_loop_max_slope(c)\n",
-    "        c_water = get_loop_water_profile(c)\n",
-    "        c_poi_diversity = get_loop_poi_diversity(c)\n",
-    "        for sourcenode in c:\n",
-    "            numloops += 1\n",
-    "            allloops[sourcenode][\"loops\"].append(c)\n",
-    "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
-    "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
-    "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
-    "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
-    "            allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
-    "if LOOP_LENGTH_BOUND:\n",
-    "    llb_string = \" and length bound \" + str(LOOP_LENGTH_BOUND) + \"m\"\n",
-    "else:\n",
-    "    llb_string = \"\"\n",
-    "print(\n",
-    "    \"Found \"\n",
-    "    + str(numloops)\n",
-    "    + \" loops for number of nodes bound \"\n",
-    "    + str(LOOP_NUMNODE_BOUND)\n",
-    "    + llb_string\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e5b76cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alllooplengths = np.zeros(numloops, dtype=np.float32)\n",
-    "allloopnumnodes = np.zeros(numloops, dtype=np.uint8)\n",
-    "allloopmaxslopes = np.zeros(numloops, dtype=np.uint16)\n",
-    "i = 0\n",
-    "for j in tqdm(allloops, desc=\"Extract global loop properties\"):\n",
-    "    l = len(allloops[j][\"lengths\"])\n",
-    "    alllooplengths[i : i + l] = allloops[j][\"lengths\"]\n",
-    "    allloopnumnodes[i : i + l] = allloops[j][\"numnodes\"]\n",
-    "    allloopmaxslopes[i : i + l] = (np.array(allloops[j][\"max_slopes\"]) * 100).astype(\n",
-    "        np.uint16\n",
-    "    )  # max_slopes are multiplied by 100 for storage as uint16\n",
-    "    i += l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39e717fc-2787-4626-acdf-1a3a2ddf7b98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Turn lists into numpy arrays for less data storage\n",
-    "for sourcenode in tqdm(allloops, desc=\"Turn loop data into numpy arrays\"):\n",
-    "    for k, v in allloops[sourcenode].items():\n",
-    "        if k == \"lengths\":\n",
-    "            allloops[sourcenode][k] = np.array(\n",
-    "                allloops[sourcenode][k], dtype=np.float32\n",
-    "            )\n",
-    "        elif k == \"numnodes\":\n",
-    "            allloops[sourcenode][k] = np.array(allloops[sourcenode][k], dtype=np.uint8)\n",
-    "        elif k == \"max_slopes\":\n",
-    "            intslopes = [\n",
-    "                i * 100 for i in allloops[sourcenode][k]\n",
-    "            ]  # max_slopes are multiplied by 100 for storage as uint16\n",
-    "            allloops[sourcenode][k] = np.array(intslopes, dtype=np.uint16)\n",
-    "        elif k == \"poi_diversity\":\n",
-    "            allloops[sourcenode][k] = np.array(allloops[sourcenode][k], dtype=np.uint8)"
+    "allloops, alllooplengths, allloopnumnodes, allloopmaxslopes = get_allloops_nx(Gnx)"
    ]
   },
   {
