Create load_pois() function

--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "debug = False  # Set to True for extra plots and verbosity"
+    "debug = True  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -106,34 +106,10 @@
     "        G_new = pickle.load(f)\n",
     "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
     "\n",
-    "# Merge POIs\n",
-    "poi_files = {\n",
-    "    \"facility\": [\n",
-    "        \"facility.gpkg\",\n",
-    "    ],\n",
-    "    \"service\": [\n",
-    "        \"service.gpkg\",\n",
-    "    ],\n",
-    "    \"attraction\": [\"poi.gpkg\"],\n",
-    "}\n",
-    "pois = gpd.GeoDataFrame()\n",
-    "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
-    "    for cat in [*poi_files]:\n",
-    "        for f in poi_files[cat]:\n",
-    "            pois_new = gpd.read_file(PATH[subarea][\"data_in_pois\"] + f)\n",
-    "            pois_new[\"category\"] = cat\n",
-    "            # Shift Bornholm POIs\n",
-    "            if subarea == \"bornholm\":\n",
-    "                pois_new[\"geometry\"] = pois_new[\"geometry\"].apply(\n",
-    "                    shapely.affinity.translate,\n",
-    "                    xoff=BORNHOLM_DELTA[0],\n",
-    "                    yoff=BORNHOLM_DELTA[1],\n",
-    "                )\n",
-    "\n",
-    "            pois = pd.concat([pois, pois_new], ignore_index=True)\n",
-    "pois = pois.drop([\"type\", \"gruppe\"], axis=1)\n",
+    "# Load POIs\n",
+    "pois = load_pois()\n",
     "if debug:\n",
-    "    print(pois.head())"
+    "    print(pois.tail())"
    ]
   },
   {
