Refactor more snap code into functions

--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -176,32 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://stackoverflow.com/questions/52582864/snap-a-geodataframe-of-points-to-nearest-line-in-separate-geodataframe\n",
-    "\n",
-    "# Join the closest line geometry to each point\n",
-    "edges[\n",
-    "    \"line_geom\"\n",
-    "] = edges.geometry  # Save the line geometry in a new column, or it is lost in the sjoin\n",
-    "pois_snapped = pois.sjoin_nearest(\n",
-    "    edges[[\"line_geom\", \"geometry\"]],\n",
-    "    how=\"left\",\n",
-    "    max_distance=SNAP_THRESHOLD,\n",
-    "    distance_col=\"distance\",\n",
-    ")\n",
-    "drop_indices = pois_snapped[pois_snapped[\"line_geom\"] == None].index\n",
-    "pois_snapped.drop(drop_indices, inplace=True)  # Drop POIs that are too far from a link\n",
-    "\n",
-    "# Snap each point to the nearest point on the nearest line\n",
-    "pois_snapped[\"geometry\"] = pois_snapped.apply(\n",
-    "    lambda x: snap(\n",
-    "        x.geometry, nearest_points(x.geometry, x.line_geom)[1], tolerance=SNAP_THRESHOLD\n",
-    "    ),\n",
-    "    axis=1,\n",
-    ")\n",
-    "\n",
-    "pois_snapped = pois_snapped.drop(columns=[\"line_geom\"])\n",
-    "pois_snapped.rename(columns={\"index_right\": \"index_edge\"}, inplace=True)\n",
-    "\n",
+    "pois_snapped = snap_pois(pois, edges)\n",
     "if debug:\n",
     "    print(pois_snapped.head())"
    ]
@@ -221,20 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use available poi files\n",
-    "e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
-    "\n",
-    "for _, poirow in tqdm(pois_snapped.iterrows(), total=pois_snapped.shape[0]):\n",
-    "    edges.at[poirow[\"index_edge\"], \"has_water\"] = True\n",
-    "    edges.at[poirow[\"index_edge\"], \"has_\" + poirow[\"category\"]] = True\n",
-    "edges[\"has_water\"] = (\n",
-    "    edges[\"has_facility\"] + edges[\"has_service\"] + edges[\"has_attraction\"]\n",
-    ")  # + on bools is an or\n",
-    "edges[\"poi_diversity\"] = (\n",
-    "    edges[\"has_facility\"].astype(int)\n",
-    "    + edges[\"has_service\"].astype(int)\n",
-    "    + edges[\"has_attraction\"].astype(int)\n",
-    ")\n",
+    "edges = update_poi_attributes(edges, pois_snapped)\n",
     "if debug:\n",
     "    print(edges.tail())"
    ]
