Refactor gdf to igraph conversion into function

--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -216,16 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx = momepy.gdf_to_nx(edges, approach=\"primal\", integer_labels=True)\n",
-    "G = ig.Graph.from_networkx(Gnx)\n",
-    "G.vs[\"name\"] = G.vs[\"_nx_name\"]\n",
-    "del G.vs[\"_nx_name\"]\n",
-    "del G[\"approach\"]\n",
-    "del G[\"crs\"]\n",
-    "del G.es[\"_nx_multiedge_key\"]\n",
-    "del G.es[\"line_geom\"]\n",
-    "G.es[\"weight\"] = G.es[\"mm_len\"]\n",
-    "del G.es[\"mm_len\"]\n",
+    "G = gdf_to_igraph(edges)\n",
     "if debug:\n",
     "    print(G.summary())"
    ]
