Lay out experimental setups

--- a/code/06_poi_experiments.ipynb
+++ b/code/06_poi_experiments.ipynb
@@ -73,6 +73,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e02cda8b-9a95-410b-add3-3a431a516946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addpoisnum = [100]  # How many POIs to add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7399673e-930b-42b4-98f5-aa8f86520f2a",
+   "metadata": {},
+   "source": [
+    "Experimental setups:\n",
+    "1. Add POIs to random nodes\n",
+    "2. Add POIs to nodes in H3 grid elements with lowest water densities (q0.15)\n",
+    "3. Add POIs to nodes in H3 grid elements with lowest loop density (q0.15)\n",
+    "4. Add POIs to nodes in H3 grid elements with highest node density (q0.15)\n",
+    "5. Add POIs to nodes in H3 grid elements with lowest water densities (q0.5), and of those lowest loops (q0.5), and of those highest node density (q0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a6f721-ea02-4862-a0a4-07f2a845551e",
+   "metadata": {},
+   "source": [
+    "Performance metric: Percent of zero-loop nodes (improvement from 29%)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "876e2b5b",
    "metadata": {},
@@ -92,27 +123,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31f469da-22c9-4db2-981d-08c89270ecd3",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "860bebe7-f3a4-49da-9353-6ae4a6650eca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = nx.empty_graph()\n",
+    "with lzma.open(PATH[\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
+    "    G_new = pickle.load(f)\n",
+    "    Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
+    "pois = load_pois()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9b898889-32e0-4eb9-b39b-da385b8f4868",
    "metadata": {},
    "source": [
-    "### Add POIs"
+    "### Add POIs, snap POIs, generate loops"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "297db4be-740d-4c4c-a82d-1c265420a008",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48c5721b-f66d-4493-ade5-6e2366b4544d",
    "metadata": {},
-   "source": [
-    "### Snap POIs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62b8b4ff-02f6-496d-a6ea-9ad2e5a25d6e",
-   "metadata": {},
-   "source": [
-    "### Generate loops"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
